--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,95 +1,201 @@
 @charset "UTF-8";
 
-body{
-    background-color: #92e4dc;
-}
-main{
-    background-color: #faebd780;
-    border-radius: 20px;
-    height: 1180px;
-}
-h1{
-    text-align: center;
-    margin-bottom: 0px;
-}
-h2{
-    padding: 10px;
+@media screen and (min-width: 375px) and (max-width: 768px){
+
+    body{
+        background-color: #92e4dc;
+    }
+
+    main{
+        background-color: #faebd780;
+        border-radius: 20px;
+        height: 1180px;
+    }
+
+    h1{
+        text-align: center;
+        padding: 10px;
+        margin-bottom: 0px;
+    }
+    h2{
+        padding: 10px;
+    }
+
+    .titulosub{
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding-top: 0px;
+    }
+
+    section{
+        margin: auto;
+        margin-top: 0px;
+        text-align: center;
+        background-color: #ec9d80;
+        border-radius: 20px;
+        height: 112px;
+        position: relative;
+        box-shadow: 1px 2px 3px black;
+    }
+
+    input{
+        text-align: center;
+        position: relative;
+        bottom: 20px;
+        width: 100px;
+        height: 30px;
+        border-radius: 20px;
+        border-style: none;
+        box-shadow: 1px 2px 3px black;
+    }
     
+    .botao:active {  
+        background-color: rgb(137, 141, 141);
+    }
+    .botao {
+        cursor: pointer;
+    }         
+
+    div{    
+        position: relative;
+        bottom: 13px;
+    }
+
+    .v {
+        background-color: rgb(20, 236, 20);
+        box-shadow: 1px 2px 3px black;
+        border-radius: 20px;
+        padding: 4px;
+    }
+
+    .f {
+        background-color: red;
+        box-shadow: 1px 2px 3px black;
+        border-radius: 20px;
+        padding: 4px;
+    }
+
+    .digiNum {
+        background-color: yellow;
+        box-shadow: 1px 2px 3px black;
+        border-radius: 20px;
+        padding: 4px;
+    }
+
+    .nivel2 {  /*botao nivel 2 */
+        text-align: center;
+        position: relative;
+        left: 280px;
+        top: 10px;
+        width: 60px;
+        height: 30px;
+        border-radius: 20px;
+        border-style: none;
+        box-shadow: 1px 2px 3px black;
+        cursor: pointer;    
+    }
 }
 
-.titulosub{
-    text-align: center;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 0px;
+/* =====================TELA GRANDE==================== */
 
-}
+@media screen and (min-width: 992px) {
 
-section{
+    body{
+        background-color: #92e4dc;
+    }
     
-    margin: auto;
-    margin-top: 0px;
-    text-align: center;
-    background-color: #ec9d80;
-    border-radius: 20px;
-    height: 112px;
-    position: relative;
-    box-shadow: 1px 2px 3px black;
+    main{
+        margin: auto;
+        background-color: #faebd780;
+        box-shadow: 1px 2px 3px black;
+        border-radius: 20px;
+        width: 520px;
+        height: 1200px;
+    }
     
-}
-input{
-    text-align: center;
-    position: relative;
-    bottom: 20px;
-    width: 100px;
-    height: 30px;
-    border-radius: 20px;
-    border-style: none;
-    box-shadow: 1px 2px 3px black;
-}
- 
-.botao:active {  
-    background-color: rgb(137, 141, 141);
-}
-.botao {
-    cursor: pointer;
-}         
-
-div{    
-    position: relative;
-    bottom: 13px;
-}
-
-.v {
-    background-color: rgb(20, 236, 20);
-    box-shadow: 1px 2px 3px black;
-    border-radius: 20px;
-    padding: 4px;
-}
-
-.f {
-    background-color: red;
-    box-shadow: 1px 2px 3px black;
-    border-radius: 20px;
-    padding: 4px;
-}
-
-.digiNum {
-    background-color: yellow;
-    box-shadow: 1px 2px 3px black;
-    border-radius: 20px;
-    padding: 4px;
-}
-
-.nivel2 {  /*botao nivel 2 */
-    text-align: center;
-    position: relative;
-    left: 280px;
-    top: 10px;
-    width: 60px;
-    height: 30px;
-    border-radius: 20px;
-    border-style: none;
-    box-shadow: 1px 2px 3px black;
-    cursor: pointer;    
+    h1{
+        text-align: center;
+        margin-bottom: 0px;
+    }
+    h2{
+        padding: 10px;
+    }
+    
+    .titulosub{
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding-top: 0px;
+    }
+    
+    section{
+        margin: auto;
+        margin-top: 0px;
+        text-align: center;
+        background-color: #ec9d80;
+        border-radius: 20px;
+        width: 500px;
+        height: 112px;
+        position: relative;
+        box-shadow: 1px 2px 3px black;
+    }
+    
+    input{
+        text-align: center;
+        position: relative;
+        bottom: 20px;
+        width: 100px;
+        height: 30px;
+        border-radius: 20px;
+        border-style: none;
+        box-shadow: 1px 2px 3px black;
+    }
+     
+    .botao:active {  
+        background-color: rgb(137, 141, 141);
+    }
+    .botao {
+        cursor: pointer;
+    }         
+    
+    div{    
+        position: relative;
+        bottom: 13px;
+    }
+    
+    .v {
+        background-color: rgb(20, 236, 20);
+        box-shadow: 1px 2px 3px black;
+        border-radius: 20px;
+        padding: 4px;
+    }
+    
+    .f {
+        background-color: red;
+        box-shadow: 1px 2px 3px black;
+        border-radius: 20px;
+        padding: 4px;
+    }
+    
+    .digiNum {
+        background-color: yellow;
+        box-shadow: 1px 2px 3px black;
+        border-radius: 20px;
+        padding: 4px;
+    }
+    
+    .nivel2 {  /*botao nivel 2 */
+        background-color: #ec9d80;
+        text-align: center;
+        position: relative;
+        left: 400px;
+        top: 10px;
+        width: 60px;
+        height: 30px;
+        border-radius: 20px;
+        border-style: none;
+        box-shadow: 1px 2px 3px black;
+        cursor: pointer;    
+    }
 }
